# vampire-rs

./: .gitmodules  Cargo.toml  README.md
vampire/: Cargo.toml  README.md
vampire-sys/: Cargo.toml  README.md  build.rs
vampire-sys/src/: bindings.rs  lib.rs
vampire/examples/: bench_index2.rs  debug_problem.rs  group.rs  group2.rs  name_reuse.rs
vampire/src/: lib.rs  lock.rs
vampire/tests/: timeout_test.rs
