[package]
name = "vampire-sys"
version = "0.1.0"
edition = "2024"
authors = ["Daniel James"]
description = "Low-level FFI bindings to the Vampire theorem prover (use the 'vampire' crate instead)"
keywords = ["theorem-prover", "vampire", "ffi", "bindings"]
categories = ["external-ffi-bindings", "science"]
license = "MIT OR Apache-2.0"
readme = "README.md"
links = "vampire"

[dependencies]

[build-dependencies]
cmake = "0.1"